[package]
name = "tp-reseaux-4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "rtl-sdr-rs",
    "fm-data-transmitter"
]

[dependencies]
pnet = "0.33.0"
rusb = "0.9"
byteorder = "1"
log = "0.4"
mockall = "0.11"

ctrlc = "3.2.3"
num-complex = "0.4"
stderrlog = "0.5"

rtlsdr-rs = { path = "rtl-sdr-rs"}
fm-data-transmitter = { path = "fm-data-transmitter" }
